ToDo
-------------------------------------
fix pagination delete item error
fix colors / design
add google login
add facebook login
prune unnessecary pagination code
remove legacy unsupported dependency react-addons-create-fragment
configure prettier with eslint- https://hackernoon.com/configure-eslint-prettier-and-flow-in-vs-code-for-react-development-c9d95db07213


Done
--------------------------------------
fix pagination active class - done : added files locally
drop database on mlab - created new database instead