@@ -21,6 +21,7 @@ $danger: rgba(186, 16, 81, 0.49);
 @import "~bulma/sass/elements/form";
 @import "~bulma/sass/elements/table";
 @import "~bulma/sass/elements/title";
+@import "~bulma/sass/components/card";
 
 /* track page */
 input[type="datetime-local"] {
